--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,29 +12,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@id/tv_opt2"
+        android:layout_marginBottom="2dp"
         android:text="Cevap 1" />
 
     <Button
         android:id="@+id/tv_opt2"
         android:layout_width="match_parent"
-        android:layout_above="@id/tv_opt3"
         android:layout_height="wrap_content"
+        android:layout_above="@id/tv_opt3"
         android:text="Cevap 2" />
 
     <Button
         android:id="@+id/tv_opt3"
         android:layout_width="match_parent"
-        android:layout_above="@id/btn_next"
         android:layout_height="wrap_content"
-        android:text="Cevap 3" />
-    <Button
-        android:id="@+id/btn_next"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:text="GONDER"
         android:layout_alignParentBottom="true"
-        android:textColor="@color/white" />
+        android:text="Cevap 3" />
+
 
     <TextView
         android:id="@+id/tv_question"
